# conquer

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  SPRINT-COMMANDS-PARITY.md  SPRINT-PARITY-2.md  SPRINT-PARITY.md  SPRINT-TURN-PIPELINE.md  SPRINT-UI-COMMANDS.md  SPRINT-VALIDATION-FIX.md  TODO.md  conquer-build-state.json  docker-compose.prod.yml  docker-compose.yml  railway.toml
.github/workflows/: cd.yml  ci.yml
conquer-core/: Cargo.toml
conquer-core/src/: actions.rs  constants.rs  enums.rs  lib.rs  powers.rs  rng.rs  structs.rs  tables.rs
conquer-db/: Cargo.toml
conquer-db/migrations/: 001_initial_schema.sql
conquer-db/src/: auth.rs  error.rs  lib.rs  models.rs  pg.rs  store.rs
conquer-engine/: Cargo.toml
conquer-engine/src/: combat.rs  commands.rs  diplomacy.rs  economy.rs  events.rs  lib.rs  magic.rs  monster.rs  movement.rs  nation.rs  navy.rs  npc.rs  rng.rs  trade.rs  turn.rs  utils.rs  worldgen.rs
conquer-engine/tests/: playtest.rs
conquer-oracle/: Cargo.toml
conquer-oracle/src/: loader.rs
conquer-oracle/tests/: debug_gold.rs  debug_movement.rs  debug_spreadsheet.rs  function_parity.rs  oracle_tests.rs  parity_tests.rs
conquer-server/: Cargo.toml
conquer-server/src/: app.rs  config.rs  errors.rs  jwt.rs  lib.rs  main.rs  metrics.rs  ws.rs
conquer-server/src/routes/: actions.rs  admin.rs  auth.rs  games.rs  health.rs  invites.rs  mod.rs  notifications.rs  spectators.rs  state.rs  users.rs  websocket.rs
docs/: DEPLOY.md  DEV-SETUP.md  KNOWN-BUGS.md  ORACLE.md  RNG.md  TESTING.md  TILE-MAPPINGS.md  tileset-spec.json
gpl-release/: Makefile  admin.c  conquer_rand.h  header.h  headless.h  help0  makeworl.c  newhelp  newlogin.c  sed.1  sed.2
logs/: error-patterns.md
oracle/: Makefile  oracle.c
oracle/snapshots/: rng_seed42_10000.txt
oracle/snapshots/seed42_turns/: turn1.json  turn10.json  turn11.json  turn2.json  turn3.json  turn4.json  turn5.json  turn6.json  turn7.json  turn8.json  turn9.json
oracle/snapshots/seed42_turns_v1/: turn10.json  turn3.json  turn4.json  turn5.json  turn6.json  turn9.json
tests/: e2e_test.sh
tools/tilegen/: config.json  generate-full.py  generate-full.sh  generate.sh  manifest-schema.json  tile-list-full.json  tile-list.json
web/: index.html  package-lock.json  vite.config.ts
web/public/: manifest.json  sw.js
web/src/: main.ts  types.ts
web/src/game/: gameScreen.ts  inputHandler.ts  mapView.ts  (+3 more)
(+30 files in other folders)
