[package]
name = "conquer-db"
version = "0.1.0"
edition = "2021"

[dependencies]
conquer-core = { path = "../conquer-core" }
conquer-engine = { path = "../conquer-engine" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (optional — compile without Postgres for tests)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }

# Auth
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["std", "rand_core"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

[features]
default = []
postgres = ["sqlx"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
