[package]
name = "conquer-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
conquer-core = { path = "../conquer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
conquer-core = { path = "../conquer-core" }
conquer-engine = { path = "../conquer-engine" }
